discussion/kv_engine/168587/168587_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Reduce cost of including probabilistic_counter.h

probabilistic_counter.h is included by hash_table.h (as HashTable
includes a ProbabilisticCounter member), and hash_table.h is itself
included by many other files.

probabilistic_counter.h is relatively expensive to include, as while
it is very small it includes <random> which costs ~135ms.

Move the function which actually requires <random> into it's own .cc
file. This reduces the cost of including probabilistic_counter.h - so
much so that probabilistic_counter.h is no longer listed in the top
headers, so using a header which includes it as proxy to measure the
improvement.

before:

    19130 ms: kv_engine/engines/ep/src/hash_table.h (included 77 times, avg 248 ms)

after:

    7755 ms: kv_engine/engines/ep/src/hash_table.h (included 77 times, avg 100 ms)

Change-Id: Ic6098e90ed1ee2e86cda4310754b14cf8c87de0a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 15:18:36.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 15:49:16.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16722/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16722/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17517/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24844/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24844/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4470/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4470/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14767/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/probabilistic_counter.h:95:22: error: unknown type name "uint16_t" [clang-diagnostic-error]
    bool isSaturated(uint16_t counter) const {
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/probabilistic_counter.h:96:28: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return (counter == std::numeric_limits<T>::max());
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14767/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/probabilistic_counter.h:95:22:
error: unknown type name "uint16_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14767/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36223/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/probabilistic_counter.h:96:33:
error: no member named "numeric_limits" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36223/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15573/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
[2022-01-12T15:30:33.610Z] unknown file: Failure
[2022-01-12T15:30:33.610Z] C++ exception with description "Failed to store TransportProtocols_XattrTest_mb25928_SystemCanExceedDocumentLimit_Mcbp_XattrYes_JsonNo_SnappyYes: Temporary failure (134)" thrown in SetUp().
[2022-01-12T15:30:33.610Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (14 ms)
TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15573/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4412/ : FAILURE

Compile error at [2022-01-12T15:42:53.910Z] ../kv_engine/engines/ep/src/probabilistic_counter.h:96:33:
error: no member named "numeric_limits" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4412/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13613/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42748/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16431/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
